overflow bug was fixed. have offset problem

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,3 @@
-cmake_minimum_required(VERSION 3.19)
-project(GPSL1Band)
-
-set(CMAKE_CXX_STANDARD 14)
-
-add_executable(GPSL1Band main.cpp)
+version https://git-lfs.github.com/spec/v1
+oid sha256:29f6701f106a3843a7c88ac5442c6d2ba0380d215509fed05072a73fc66c42cf
+size 119
