--- a/.gitattributes
+++ b/.gitattributes
@@ -8,3 +8,4 @@
 *.ubx filter=lfs diff=lfs merge=lfs -text
 *.cpp filter=lfs diff=lfs merge=lfs -text
 *.rar filter=lfs diff=lfs merge=lfs -text
+*.h filter=lfs diff=lfs merge=lfs -text
